--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #d5d5d5;
     --foreground: #ededed;
   }
 }
